[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Camera.gd" type="Script" id=2]
[ext_resource path="res://player/Player.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.4
height = 1.4

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Mesh" type="Spatial" parent="."]

[node name="t_pose" parent="Mesh" instance=ExtResource( 1 )]

[node name="Camroot" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="h" type="Spatial" parent="Camroot"]

[node name="v" type="Spatial" parent="Camroot/h"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0 )

[node name="Camera" type="ClippedCamera" parent="Camroot/h/v"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -3.56205 )
current = true
process_mode = 1

[node name="mouse_control_stay_delay" type="Timer" parent="Camroot"]
one_shot = true

[node name="Status" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Z" type="ColorRect" parent="Status"]
margin_left = 140.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Status/Z"]
margin_left = 15.102
margin_top = 12.7423
margin_right = 23.102
margin_bottom = 26.7423
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Z"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="ColorRect" parent="Status"]
margin_left = 140.0
margin_top = 70.0
margin_right = 180.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Status/S"]
margin_left = 15.102
margin_top = 12.7423
margin_right = 23.102
margin_bottom = 26.7423
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "S"

[node name="D" type="ColorRect" parent="Status"]
margin_left = 190.0
margin_top = 70.0
margin_right = 230.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Status/D"]
margin_left = 15.102
margin_top = 12.7423
margin_right = 25.102
margin_bottom = 26.7423
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "D"

[node name="Space" type="ColorRect" parent="Status"]
margin_left = 240.0
margin_top = 70.0
margin_right = 340.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Status/Space"]
margin_left = 28.7779
margin_top = 12.7423
margin_right = 67.7779
margin_bottom = 26.7423
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SPACE"

[node name="Q" type="ColorRect" parent="Status"]
margin_left = 90.0
margin_top = 70.0
margin_right = 130.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Status/Q"]
margin_left = 15.0
margin_top = 13.0
margin_right = 26.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Q"

[node name="Shift" type="ColorRect" parent="Status"]
margin_left = 10.0
margin_top = 70.0
margin_right = 80.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Status/Shift"]
margin_left = 15.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SHIFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alt" type="ColorRect" parent="Status"]
margin_left = 350.0
margin_top = 70.0
margin_right = 420.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Status/Alt"]
margin_left = 15.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ALT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.1, 0 )
shape = SubResource( 1 )

[node name="slide_window" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="slide_duration" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="is_grounded" type="Label" parent="."]
margin_left = 15.5671
margin_top = 122.335
margin_right = 279.567
margin_bottom = 136.335
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="touch_floor" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.2, 0 )

[node name="target" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18608, 0.783111 )
